<resources>
    <string name="app_name">导游团队行程管理助手</string>
    <string name="app_name_short">行程管理助手</string>
    <string name="verify_title">系统登录</string>

    <!-- String for login activity -->
    <string name="auto_login">自动登录</string>
    <string name="forgot">忘记密码？</string>
    <string name="login">登录</string>
    <string name="sign_up">注册</string>
    <string name="guider_number">导游证号 :</string>
    <string name="guider_number_hint">导游证号</string>
    <string name="password">密码 :</string>
    <string name="password_hint">密码</string>
    <string name="company_name">长沙蕾欧娜信息科技有限公司</string>
    <string name="copy_right">2016年 2月 保留所有权利</string>

    <!-- String for reset password activity -->
    <string name="get_verify_code_introduction">通过向您个人信息中的手机号发送验证码，请确保此手机在您身边，验证码十分钟内有效请尽快完成重置。</string>
    <string name="verify_code">验证码 :</string>
    <string name="verify_code_hint">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="new_password">新密码 :</string>
    <string name="new_password_hint">新密码</string>
    <string name="confirm_password">确认密码 :</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="remember_new_password">记住新密码</string>
    <string name="reset_password">重置密码</string>


    <!-- String for sign up activity -->
    <string name="subject_step1">第一步 : 上传照片</string>
    <string name="subject_step2">第二步 : 手机验证</string>
    <string name="subject_step3">第三步 : 注册信息</string>
    <string name="prev_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="sign_up_title">注册</string>

    <!-- String for upload photo fragment -->
    <string name="upload_photo_introduction">请手持本人导游证自拍一张照片上传，确保人物及照片影像清晰可辨</string>
    <string name="photo_example">示例</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">相册</string>
    <string name="upload_photo">上传照片</string>

    <!-- String for phone verify fragment -->
    <string name="phone_number">手机号码 :</string>
    <string name="phone_number_hint">手机号码</string>
    <string name="verify_description">请输入您的手机号码，我们将向您发送验证码，验证码60秒内有效</string>

    <!-- String for information fragment -->
    <string name="user_name">姓名 :</string>
    <string name="user_name_hint">姓名</string>
    <string name="user_id">身份证号 :</string>
    <string name="user_id_hint">身份证号</string>
    <string name="first_lang">主要语种</string>
    <string name="first_lang_hint">主要语种</string>
    <string name="second_lang">次要语种 :</string>
    <string name="second_lang_hint">次要语种</string>
    <string name="license_confirm">我已认真阅读并同意</string>
    <string name="license_hype_link">《许可协议》</string>
    <string name="submit">提交注册信息</string>

    <!-- String for main activity -->
    <string name="tab_ongoing_list">在带的团</string>
    <string name="tab_waiting_list">等待的团</string>
    <string name="tab_finished_list">完成的团</string>
    <string name="tab_settings">设置</string>


    <!-- String for verify activity -->
    <string name="account_verifing">尊敬的导游，您的账户正在审核中，请耐心等待</string>
    <string name="login_retry">秒后重新尝试</string>

    <!-- String for team list item -->
    <string name="team_id_lable">编号 :</string>

    <!-- String for team activity -->
    <string name="tab_info">基本信息</string>
    <string name="title_info">团队基本信息</string>
    <string name="tab_schedule">行程安排</string>
    <string name="title_schedule">团队行程安排</string>
    <string name="tab_real_name">实名信息</string>
    <string name="title_real_name">团队实名信息</string>
    <string name="tab_deal_record">成交记录</string>
    <string name="title_deal_record">团队成交记录</string>
    <string name="tab_log">日志信息</string>
    <string name="title_log">团队日志信息</string>

    <!-- String for team schedule fragment -->
    <string name="team_id">团队编号:</string>
    <string name="schedule_id">行程单号:</string>
    <string name="schedule_number">本团队共有%1$d个行程安排</string>
    <string name="schedule_type">事务类型:</string>
    <string name="schedule_state">状态:</string>
    <string name="real_name_number">本团队共有%1$d条实名信息</string>
    <string name="team_log_number">本团队共有%1$d条团队日志</string>
    <string name="deal_record_number">本团队共有%1$d条成交记录</string>

    <!-- String for dialog -->
    <!--<string name="finish_team_confirmation">您真的确认“接团”吗？</string>-->
    <string name="accept_team_confirmation">您真的确认“接团”吗？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <!-- String for menu actions -->
    <string name="menu_refresh">刷新</string>
    <string name="menu_logout">登出</string>
    <string name="menu_change_account">切换账号</string>
    <string name="menu_accept">接团</string>
    <string name="menu_finish">完成带团</string>
    <string name="menu_sign_up">重新申请</string>
    <string name="menu_sync">同步</string>
    <string name="menu_cancel_schedule">取消行程</string>
    <string name="menu_finish_schedule">标识为完成</string>
    <string name="menu_change_reservation">改签预约</string>
    <string name="menu_make_reservation">发起预约</string>
    <string name="menu_cancel_reservation">取消预约</string>

    <string name="name_label">姓名</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>

</resources>
