<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" />

    <RadioGroup
        android:id="@+id/radioTabs"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tabInfo"
            style="@style/navigate_bottom"
            android:drawableTop="@mipmap/ic_launcher"
            android:onClick="onClickTabInfo"
            android:text="@string/tab_info" />

        <RadioButton
            android:id="@+id/tabSchedule"
            style="@style/navigate_bottom"
            android:drawableTop="@mipmap/ic_launcher"
            android:onClick="onClickTabSchedule"
            android:text="@string/tab_schedule" />

        <RadioButton
            android:id="@+id/tabRealName"
            style="@style/navigate_bottom"
            android:drawableTop="@mipmap/ic_launcher"
            android:onClick="onClickTabRealName"
            android:text="@string/tab_real_name" />

        <RadioButton
            android:id="@+id/tabDealRecord"
            style="@style/navigate_bottom"
            android:drawableTop="@mipmap/ic_launcher"
            android:onClick="onClickTabDealRecord"
            android:text="@string/tab_deal_record" />

        <RadioButton
            android:id="@+id/tabLog"
            style="@style/navigate_bottom"
            android:drawableTop="@mipmap/ic_launcher"
            android:onClick="onClickTabLog"
            android:text="@string/tab_log" />
    </RadioGroup>

</LinearLayout>

