<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" />

    <RadioGroup
        android:id="@+id/main_radio"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:background="#133575"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <RadioButton
            android:id="@+id/tabOngoingList"
            style="@style/main_tab_bottom"
            android:text="@string/tab_ongoing_list"
            android:onClick="onClickOngoingTab"
            android:drawableTop="@mipmap/ic_launcher" />

        <RadioButton
            android:id="@+id/tabWaitingList"
            android:text="@string/tab_waiting_list"
            style="@style/main_tab_bottom"
            android:onClick="onClickWaitingTab"
            android:drawableTop="@mipmap/ic_launcher" />

        <RadioButton
            android:id="@+id/tabFinishList"
            style="@style/main_tab_bottom"
            android:onClick="onClickFinishTab"
            android:text="@string/tab_finished_list"
            android:drawableTop="@mipmap/ic_launcher" />

        <RadioButton
            android:id="@+id/tabSetting"
            style="@style/main_tab_bottom"
            android:text="@string/tab_settings"
            android:onClick="onClickSettingsTab"
            android:drawableTop="@mipmap/ic_launcher" />
    </RadioGroup>

</LinearLayout>
