<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp">

        <TextView
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_alignParentLeft="true"
            android:text="@string/guider_number" />

        <EditText
            android:id="@+id/guiderNumber"
            style="@style/EditNormal"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_alignParentRight="true"
            android:maxLength="20"
            android:hint="@string/guider_number_hint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp">

        <TextView
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_alignParentLeft="true"
            android:text="旧密码:" />

        <EditText
            android:id="@+id/oldPassword"
            style="@style/EditNormal"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_alignParentRight="true"
            android:hint="旧密码"
            android:inputType="textPassword" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp">

        <TextView
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_alignParentLeft="true"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/newPassword"
            style="@style/EditNormal"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_alignParentRight="true"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp">

        <TextView
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_alignParentLeft="true"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/confirmPassword"
            style="@style/EditNormal"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_alignParentRight="true"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkboxRemember"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_height_normal"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical"
        android:text="@string/remember_new_password"
        android:textColor="@color/textColorSecond"
        android:textSize="12sp" />

    <Button
        style="@style/BottonNormal"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:onClick="onClickChangePassword"
        android:text="修改密码" />

</LinearLayout>

