<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ybx.guider.fragment.UploadPhotoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:src="@mipmap/photo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/photo"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/example"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/photo_example" />

                <Button
                    android:id="@+id/pickPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/pick_photo" />

                <Button
                    android:id="@+id/takePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/take_photo" />

            </LinearLayout>
        </RelativeLayout>
        <TextView
            style="@style/TextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/upload_photo_introduction" />
        <Button
            android:id="@+id/upload"
            style="@style/TextLarge"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/upload_photo" />

    </LinearLayout>
</FrameLayout>
